<resources>
    <string name="app_name">MAI_2</string>
    <string name="projects">Проекты</string>
    <string name="add_alternatives">Добавить альтернативы</string>
    <string name="add_criterions">Добавить критерии</string>
    <string name="choose_judgment">Выбрать суждение</string>
    <string name="objective">Цель</string>
    <string name="name">Название</string>
    <string name="next">Далее</string>
    <string name="saveAndContinue">Продолжить</string>
    <string name="change">Изменить</string>
    <string name="save">Сохранить</string>
    <string name="add">добавить</string>
    <string name="delete">Удалить</string>
    <string name="criterion">Критерий</string>
    <string name="alternative">Альтеранатива</string>
    <string name="make_result">Произвести вычисления</string>

    <string name="add_new_project">Создать новый проект</string>
    <string name="menu_item1">item1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="judgment_description">Теперь необходимо произвести оценку альтернатив и критериев</string>
    <string name="button_criterions_judgment">Произвести оценку критериев</string>
    <string name="button_alternatives_judgment">Произвести оценку альтернатив</string>
    <string name="judgment_criterions_title">Оценка критериев</string>
    <string name="judgment_alternatives_title">Оценка альтернатив</string>



</resources>
