<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/projectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Название"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/projectObjective"
            android:layout_width="354dp"
            android:text="Цель"

            android:layout_height="wrap_content"
            android:hint="@string/objective" />

        <Button
            android:id="@+id/add_criterions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:enabled="true"
            android:text="@string/add_criterions"
            android:textColor="#6c6c6c" />

        <LinearLayout
            android:id="@+id/add_criterion_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical"></LinearLayout>s
        <Button
            android:id="@+id/add_alternatives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:enabled="true"
            android:text="@string/add_alternatives"
            android:textColor="#6c6c6c"
            android:visibility="invisible" />
        <LinearLayout
            android:id="@+id/add_alternative_linear"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/add_project_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:enabled="true"
            android:text="@string/next"
            android:textColor="#6c6c6c"
            android:visibility="invisible"
            android:layout_gravity="bottom" />
    </LinearLayout>
</ScrollView>